# TinyNTPClient

./: CMakeLists.txt  Doxyfile  README.md  library.properties
docs/html/: _tiny_n_t_p_client_8h.html  _tiny_n_t_p_client_8h_source.html  annotated.html  class_tiny_n_t_p_client-members.html  class_tiny_n_t_p_client.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  files_0.js  functions_0.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js
examples/ntp-desktop/: CMakeLists.txt  ntp-desktop.cpp
examples/ntp-wifi/: ntp-wifi.ino
src/: TinyNTPClient.h
